src/test/deca/context/valid/created/protected.deca
class A{
	protected int a = 3;
}
class B extends A{
	int b = a;	
}
