src/test/deca/context/invalid/created/protected.deca
class A{
	protected int a = 3;
}
class B{
	A c = new A();
	int b = c.a;	
}
